# application_service

./: .dockerignore  .env  .env.template  .gitignore  JOB.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_10_02_1258-ef7160babe1e_add_user.py  2025_01_15_1338-8c3dc05b2077_aplication.py  2025_01_15_2148-00fb115816c0_aplication_remove_uniqie_user_name.py
docker/: Dockerfile.back  Dockerfile.nginx  nginx.test.conf
init_db_scripts/: init_test_database.sql
kafka_data/: bootstrap.checkpoint  meta.properties
source/: ioc.py  main.py
source/api/: __init__.py
source/api/api_v1/: __init__.py
source/api/api_v1/views/: application.py  kafka.py  schema_broker.py
source/api/dependency/aplication/: gateway_impl.py  output_data.py  reader.py  (+1 more)
source/common/: commiter.py  error.py
source/config/: kafka_producer.py  settings.py
source/db/: __init__.py  db_helper.py  sa_commiter.py
source/db/models/: __init__.py  application.py  base.py  user.py
source/errors/: application.py  kafka.py  notexists.py
source/filters/: application.py  pagination.py
source/schemas/other/: kafka.py
source/schemas/pydantic/: application.py  kafka.py
source/services/: logging.py
source/services/application/: convertor.py
source/services/kafka/: common.py  create_topic.py  faststream.py  kafka_service.py  kafka_servise_fs.py
source/tests/: confest.py  test_interactor.py
source/tests/application/: test_create_interactor.py
source/types/: model_id.py
source/utils/: case_converter.py
(+16 files in other folders)
